Fixing up spacing in the page header overall and adjusting in a few specific pages

--- a/web/app/themes/ivoh/assets/styles/components/_base.scss
+++ b/web/app/themes/ivoh/assets/styles/components/_base.scss
@@ -78,11 +78,9 @@ hr {
 
 // Main post content padding
 .post-content {
-  padding-top: #{$beat * 3};
   padding-bottom: #{$beat * 3};
 
   @include media-md {
-    padding-top: #{$beat * 6};
     padding-bottom: #{$beat * 6};
   }
 }
