--- a/web/app/themes/ivoh/assets/styles/components/_page-header.scss
+++ b/web/app/themes/ivoh/assets/styles/components/_page-header.scss
@@ -5,7 +5,7 @@
   margin-bottom: $padding-md;
 
   &-text {
-    padding: #{$beat * 6} $gutter;
+    padding: #{$beat * 6} $gutter 0;
   }
 
   .page-title {
@@ -71,7 +71,7 @@
     &-text {
       margin: 0 auto;
       width: columns(10);
-      padding: #{$beat * 9} 0;
+      padding: #{$beat * 9} 0 0;
     }
   }
 }
@@ -108,6 +108,13 @@
 }
 
 // Banner Images
+.page-header-banner {
+  margin-top: $padding-sm;
+  @include media-md {
+    margin-top: $padding-lg;
+  }
+}
+
 .banner-image-container {
   padding: 0 $gutter;
   @include media-md {
@@ -142,5 +149,22 @@
   .photo-byline {
     @include h5;
     text-align: center;
+  }
+}
+
+// Minor Page-header Mods based on page
+body.partner-organizations {
+  .page-header {
+    &::after {
+      content: '';
+      height: 1px;
+      display: block;
+      margin: $padding-sm $gutter 0;
+      background-color: color(black);
+      @include media-md {
+        width: columns(18);
+        margin: $padding-lg auto 0;
+      }
+    }
   }
 }
