--- a/web/app/themes/ivoh/assets/styles/pages/_home.scss
+++ b/web/app/themes/ivoh/assets/styles/pages/_home.scss
@@ -91,6 +91,9 @@
   }
 
   .page-header {
+    @include media-md {
+      margin-bottom: $beat * 11;
+    }
 
     .page-header-top {
       display: flex;
